19-Apr-2015 Laurent Duflot
	* launch_jobs_on_grid.py: remove spurious exit(0)
	* ZeroLeptonNTVar, ZeroLeptonSR, ZeroLeptonCRY: add MET_TRack to ExtraVars
	* tag ZeroLeptonRun2-00-00-30

19-Apr-2015 Laurent Duflot
	* ZeroLeptonCRY: add reclustering variables
	* ZeroLeptonCRZ: add reclustering variables, add M_ll cut
	* data: add dataset lists for signa and gamma+jet p1872
	* launch_jobs_on_grid.py: add --config option
	* tag ZeroLeptonRun2-00-00-29

18-Apr-2015 Geraldine Conti
	* added CRZ specific variables

15-Apr-2015 Laurent Duflot
	* adapt to SUSYTools-00-05-00-26
	* BuildSUSYObjs: set the DataSource property of SUSYTools,
	set DoJetAreaCalib and DoJetGSCCalib to true
	* BuildSUSYObjs, ZeroLeptonSr, ZeroLeptonCRxx, ZeroLeptonUtils: special case
	for p1872, use MET_TrackFix and MET_RefFinalFix
	* config files: special flag for p1872, make p1872 the default, update
	default file to a p1872 ttbar file
	* launch_jobs_on_grid.py: test for the p1872 tag
	* README: update example file

15-Apr-2015 Laurent Duflot
	* ZeroLeptonCRY: fix to cope with the case that there are no good jets
	* tag ZeroLeptonRun2-00-00-28

14-Apr-2015 Laurent Duflot
	* add ZeroLeptonCRZ
	* tag ZeroLeptonRun2-00-00-27

13-Apr-2015 Laurent Duflot
	* tag ZeroLeptonRun2-00-00-26

07-Apr-2015 Laurent Duflot
	* makeSignalPointPickle.py: merge the two GG_onestepCC dicts

06-Apr-2015 Laurent Duflot
	* mc14_13TeV_MCSampleList.py, mc14_13TeV_lYjets.xxx: add Sherpa gamma+jet MassiveCB samples
	* create ZeroLeptonCRY
	* BuildSUSYObjects: call IsSignalPhoton, cleanup container using suffix
	* zerolepton.config, zerolepton_with_syst.config: add CRY

06-Apr-2015 Laurent Duflot
	* MCEventVeto, ZeroLeptonSR, ZeroLeptonCRWT: change mc12VetoCode to mcVetoCode
	* ZeroLeptonSR, ZeroLeptonCRWT: test MC veto code also for period p13tev
	* tag ZeroLeptonRun2-00-00-25


04-Apr-2015 Laurent Duflot
	* launch_jobs_on_grid.py, zerolepton.config, zerolepton_with_syst.config: add support for AtlFast samples